# modern-data-engineering-platform

./: LICENSE
aneel-complaints-etl-aws/: README.md  main.py  pyproject.toml  taskipy.toml
aneel-complaints-etl-aws/docs/: architecture.md
aneel-complaints-etl-aws/scripts/: extract.py  load.py  transform.py
aneel-complaints-etl-aws/src/: __init__.py  ingestion.py  load_to_s3.py  pipeline.py  transformation.py
climate-analytics-dbt-pipeline/: .gitignore  README.md  dbt_project.yml  generate_open_meteo_seed.py  pyproject.toml
climate-analytics-dbt-pipeline/docs/: architecture.md
climate-analytics-dbt-pipeline/models/: schema.yml
climate-analytics-dbt-pipeline/models/marts/core/: mart_climate_summary.sql
climate-analytics-dbt-pipeline/models/staging/: stg_climate.sql
climate-analytics-dbt-pipeline/scripts/: generate_climate_seed.py
climate-analytics-dbt-pipeline/seeds/: daily_climate_northeast_capitals.csv
pyspark-distributed-processing-gcp/: README.md  wordcount_spark.py
