[tool.poetry]
package-mode = false
name = "aneel-complaints-etl-aws"
version = "0.1.0"
description = "Production-oriented ETL pipeline for ANEEL complaint data ingestion and S3 delivery."
authors = ["Leticia Gomes <leticiagomes.datascience@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.31.0"
pandas = "^2.2.1"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
